Fix recent projects title spacing

--- a/less/style.less
+++ b/less/style.less
@@ -156,6 +156,7 @@ p, li {
       border-top: @border-standard;
       border-color: @colour-font;
       padding-top: @spacing-standard;
+      margin-top: @spacing-big;
 
       > h3 {
           position: absolute;
@@ -163,7 +164,7 @@ p, li {
           left: @size-half;
           background-color: @colour-base;
           padding: @spacing-small;
-          margin: @spacing-small 0 0 -154px;
+          margin: @spacing-small + @spacing-big 0 0 -154px;
       }
     }
   }
